k8s/step-7-frontend-ingress/front-med-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-med
  namespace: medback
  labels:
    app.kubernetes.io/name: front-med
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: medback-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: front-med
      app.kubernetes.io/component: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: front-med
        app.kubernetes.io/component: frontend
        app.kubernetes.io/part-of: medback-platform
    spec:
      containers:
        - name: front-med
          image: kheireddinemechergui/front-med:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 6
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
