k8s/step-7-frontend-ingress/front-med-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-med
  namespace: medback
  labels:
    app.kubernetes.io/name: front-med
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: medback-platform
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: front-med
    app.kubernetes.io/component: frontend
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
