k8s/step-7-frontend-ingress/medback-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medback-ingress
  namespace: medback
  labels:
    app.kubernetes.io/name: medback-ingress
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: medback-platform
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "12m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  rules:
    - host: medback.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: med-gateway
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-med
                port:
                  number: 80
